# Micro-Habit-Stacker

./: .gitignore  README.md  USAGE_GUIDE.md
habit-stacking-app/: README.md
habit-stacking-app/backend/: .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt
habit-stacking-app/backend/app/: main.py
habit-stacking-app/backend/app/api/v1/: crud.py  routes.py  schemas.py
habit-stacking-app/backend/app/core/: config.py
habit-stacking-app/backend/app/db/: models.py  session.py
habit-stacking-app/backend/app/services/: habit_service.py
habit-stacking-app/frontend/: .env.example  README.md  package.json  vercel.json
habit-stacking-app/frontend/src/components/: HabitCard.tsx  HabitChain.tsx  HabitForm.tsx  Layout.tsx  Statistics.tsx
habit-stacking-app/frontend/src/hooks/: useHabits.ts
habit-stacking-app/frontend/src/pages/: _app.tsx  index.tsx
habit-stacking-app/frontend/src/pages/habits/: [id].tsx  index.tsx
habit-stacking-app/frontend/src/styles/: globals.css
habit-stacking-app/frontend/src/types/: index.ts
habit-stacking-app/frontend/src/utils/: api.ts
habit-stacking-app/infra/: README.md  vercel.json
habit-stacking-app/infra/railway/: railway.json
habit-stacking-app/infra/render/: render.yaml
