[tool]
name = "habit-stacking-app"
version = "0.1.0"
description = "A habit stacking application built with FastAPI and SQLite."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependencies]
fastapi = "^0.75.0"
uvicorn = "^0.17.0"
sqlalchemy = "^1.4.27"
sqlite = "^3.36.0"
pydantic = "^1.9.0"
alembic = "^1.7.5"

[tool.poetry]
name = "habit-stacking-app"
version = "0.1.0"
description = "A habit stacking application built with FastAPI and SQLite."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"